# Thistle

./: Cargo.toml  README.md
libs/aur/: Cargo.toml
libs/aur/src/: lib.rs
libs/cmake/: Cargo.toml
libs/cmake/src/: lib.rs
libs/core/: Cargo.toml
libs/core/src/: lib.rs
libs/debtap/: Cargo.toml
libs/debtap/src/: lib.rs
libs/git/: Cargo.toml
libs/git/src/: lib.rs
libs/help/: Cargo.toml
libs/help/src/: lib.rs
libs/meson/: Cargo.toml
libs/meson/src/: lib.rs
libs/pacman/: Cargo.toml
libs/pacman/src/: lib.rs
src/: aur.rs  cmake.rs  cores.rs  delegate.rs  git.rs  help.rs  main.rs  meson.rs  package.rs
